fixed the overflow in small devices

--- a/lmisapp/src/Compontents/Dashboard/Dashboard.css
+++ b/lmisapp/src/Compontents/Dashboard/Dashboard.css
@@ -64,6 +64,8 @@
 
   .PageContent {
       padding: 20px;
+      width: 100%;
+      overflow-x: auto;
     }
  
     .overlay {
